--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-product-list></app-product-list>
-<!-- <router-outlet></router-outlet> -->
+<app-header></app-header>
+<app-input></app-input>
+<!-- <app-product-list></app-product-list> -->
+
