--- a/src/app/input/input.component.css
+++ b/src/app/input/input.component.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
-
-
 .space{
     margin: auto;
     margin-top: 20px;
@@ -15,7 +12,7 @@
     color: green;
 }
 
-select,input{
+input{
     background-color: #c2c0c0;
     font-size: 20px;
     /* border: none; */
@@ -25,7 +22,7 @@ select,input{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-select,input:focus{
+input:focus{
     outline: none;
 }
 
@@ -38,40 +35,10 @@ input[type=text]{
     margin-bottom: 10px;
 }
 
-.table{
-    margin: auto;
-    border-collapse: collapse;
-    width: 60%;
-}
-
-th,td{
-    border: 0.5px solid #777575;
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
-
-tr:nth-child(even){
-    background-color: #c2c0c0;
-}
-
 .btn{
     color: white;
     background: green;
     padding: 12px 12px;
     border-radius: 5px;
     border: none;
-}
-
-.btnd{
-    color: white;
-    background: rgb(224, 49, 26);
-    padding: 12px 12px;
-    border-radius: 5px;
-    border: none;
-}
-
-.grandTotal{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-style: normal;
 }
