modified code uploaded

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -9,5 +9,5 @@
         <th><h4>Delete</h4></th>
       </tr>
   </table>
-  <app-table-row [grandTotal] = "grandTotal"></app-table-row>
+  <app-table-row></app-table-row>
 </div>
