--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -7,7 +7,7 @@
     </form>
 </div>
 <!-- {{ grandTotal }} -->
-<app-table [grandTotal] = "grandTotal"></app-table>
+<app-table></app-table>
 <app-grandtotal [grandTotal] = "grandTotal"></app-grandtotal>
 
 
