--- a/src/app/grandtotal/grandtotal.component.html
+++ b/src/app/grandtotal/grandtotal.component.html
@@ -1,4 +1,3 @@
 <div class="grandTotal center">
-    <h4>Grand Total : {{ grandTotal }}</h4>
-    <!-- <h4 *ngIf="grTotal">Grand Total : {{ grTotal }}</h4> -->
+    <h4>Grand Total : {{ GrandTotal() }}</h4>
 </div>
