--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -7,8 +7,8 @@
     </form>
 </div>
 <!-- {{ grandTotal }} -->
-<app-table></app-table>
-<app-grandtotal [grandTotal] = "grandTotal"></app-grandtotal>
+<app-table [groceryItems] = "groceryItems"></app-table>
+<app-grandtotal [groceryItems] = "groceryItems"></app-grandtotal>
 
 
 
