--- a/src/app/table-row/table-row.component.css
+++ b/src/app/table-row/table-row.component.css
@@ -2,17 +2,17 @@
     margin: auto;
     border-collapse: collapse;
     width: 60%;
-}
+} 
 
 td{
+    width: 15%;
     border: 0.5px solid #777575;
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
 }
 
-tr:nth-child(even){
-    background-color: #c2c0c0;
+.row:nth-child(even){
+    background-color: red !important;
 }
 
 .btn{
