--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -5,12 +5,13 @@
 }
 
 th,td{
+    width: 15%;
     border: 0.5px solid #777575;
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 
-tr:nth-child(even){
+/* tr:nth-child(even){
     background-color: #c2c0c0;
-}
+} */
