--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,5 +1,4 @@
-<div class="tableBody">
-  <table class="table">
+<table class="table">
       <tr>
         <th><h4>Grocery</h4></th>
         <th><h4>Unit</h4></th>
@@ -8,7 +7,5 @@
         <th><h4>Edit</h4></th>
         <th><h4>Delete</h4></th>
       </tr>
-      <app-table-row *ngFor="let item of groceryItems" [item]="item" (delete) = "deleteItem($event)"></app-table-row>
-  </table>
-  
-</div>
+</table>
+<app-table-row *ngFor="let item of groceryItems" [item]="item" (delete) = "deleteItem($event)" (edit) = "editItem($event)"></app-table-row>
