--- a/src/app/input/input.component.css
+++ b/src/app/input/input.component.css
@@ -29,6 +29,7 @@ input:focus{
 input[type=text]{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-style: normal;
+    text-align: center;
 }
 
 .adding{
