--- a/src/app/table-row/table-row.component.css
+++ b/src/app/table-row/table-row.component.css
@@ -11,9 +11,9 @@ td{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.row:nth-child(even){
+/* .row:nth-child(even){
     background-color: red !important;
-}
+} */
 
 .btn{
     color: white;
